# macro-evals

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  article.md  pyproject.toml
appendix/: reproduce.sh
baseline/: README.md  notes-for-improver.md  pipeline.py
baseline/outputs/: cluster_labels.json  cluster_x_failure_mode.csv  lift.csv  run_metadata.json  suspects.csv
baseline_handfeature/: README.md  pipeline.py
baseline_handfeature/outputs/: cluster_x_failure_mode.csv  run_metadata.json
eval/: cluster_stability.md  cluster_stability.py  factorial.md  held_out.py  held_out_raw.json  held_out_results.md  metrics.py  preregistration.md  provenance_check.md  raw_numbers.json  results.md  seed_sweep.md  seed_sweep.py  seed_sweep_raw.jsonl
eval/seed_sweep_outputs/seed_137/: seed_metrics.json
eval/seed_sweep_outputs/seed_2024/: seed_metrics.json
eval/seed_sweep_outputs/seed_31337/: seed_metrics.json
eval/seed_sweep_outputs/seed_42/: seed_metrics.json
eval/seed_sweep_outputs/seed_7/: seed_metrics.json
factorial/: factorial_recalls.json
factorial/v010/: pipeline.py
factorial/v010/outputs/: cluster_labels.json  cluster_x_failure_mode.csv  (+5 more)
factorial/v100/: pipeline.py
figures/: make_figures.py
improved/: README.md  pipeline.py
improved/outputs/: cluster_labels.json  cluster_x_failure_mode.csv  drift_alerts.csv  lift.csv  run_metadata.json  suspects.csv
meta/: convergence.md  legitimacy_audit.md
release/: v1.0_acceptance.md
research/: INVENTORY_SUMMARY.txt  hypotheses.md  source-claims.md
sim/: SCHEMA.md  generate_traces.py
(+7 files in other folders)
