[project]
name = "macro-evals"
version = "1.0.0-pre"
description = "Adversarial audit of OpenAI's Macro Evals for Agentic Systems cookbook"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "John Stevens", email = "johns@accellu.com" }
]
keywords = ["evaluation", "agents", "clustering", "macro-evals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=5.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/j-h-stevens/macro-evals"
Repository = "https://github.com/j-h-stevens/macro-evals"
Issues = "https://github.com/j-h-stevens/macro-evals/issues"

[tool.uv]
dev-dependencies = []
